--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pretest" : "prettier --write \"src/**/*.ts\"",
+    "pretest:watch": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
