--- a/package.json
+++ b/package.json
@@ -18,19 +18,25 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "pretest" : "prettier --write \"src/**/*.ts\"",
+    "pretest": "prettier --write \"src/**/*.ts\"",
     "pretest:watch": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
     "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
+    "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.23",
+    "neo4j-driver": "^4.3.1",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -39,7 +45,9 @@
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^14.14.36",
+    "@types/pg": "^8.6.0",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
