--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.1.23",
     "neo4j-driver": "^4.3.1",
