--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "pretest:watch": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
+    "@nestjs/common": "^8.0.1",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.15",
+    "@nestjs/core": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^5.0.0",
     "@nestjs/typeorm": "^7.1.5",
     "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
@@ -36,7 +37,8 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
